programming/compiler/lecture/idl/idl/idl_parser.output
Terminals unused in grammar

   tok_literal
   tok_dub_constant
   tok_const


Grammar

    0 $accept: Program $end

    1 Program: DefinitionList

    2 DefinitionList: DefinitionList Definition
    3               | /* empty */

    4 Definition: Include
    5           | Namespace
    6           | TypeDefinition

    7 Include: tok_include '"' IncludePath tok_identifier '"'

    8 IncludePath: IncludePath tok_identifier '/'
    9            | /* empty */

   10 Namespace: tok_namespace NamespaceTail tok_identifier SemicolonOptional

   11 NamespaceTail: NamespaceTail tok_identifier tok_namespace_separator
   12              | /* empty */

   13 TypeDefinition: Enum
   14               | Struct
   15               | Message

   16 Enum: tok_enum tok_identifier '{' EnumDefList '}' SemicolonOptional

   17 EnumDefList: EnumDefList EnumDef
   18            | /* empty */

   19 EnumDef: EnumValue CommaOrSemicolonOptional

   20 EnumValue: tok_identifier '=' SimpleExpression
   21          | tok_identifier

   22 Struct: StructHead tok_identifier '{' StructFieldList '}' SemicolonOptional

   23 StructHead: tok_struct

   24 StructFieldList: StructFieldList Field
   25                | /* empty */

   26 Message: tok_message tok_identifier '{' MessageFieldList '}' SemicolonOptional

   27 MessageFieldList: MessageFieldList Field
   28                 | /* empty */

   29 Field: SimpleType tok_identifier FieldValue CommaOrSemicolonOptional
   30      | SimpleType tok_identifier '[' SimpleExpression ']' CommaOrSemicolonOptional
   31      | FullType tok_identifier CommaOrSemicolonOptional
   32      | FullType tok_identifier '[' SimpleExpression ']' CommaOrSemicolonOptional
   33      | tok_cplus CaptureVerbatimBlock
   34      | tok_macro_line

   35 CaptureVerbatimBlock: /* empty */

   36 FullType: NameAccessor tok_identifier

   37 NameAccessor: NameAccessor tok_identifier tok_namespace_separator
   38             | /* empty */

   39 SimpleType: tok_string
   40           | tok_bool
   41           | tok_i8
   42           | tok_i16
   43           | tok_i32
   44           | tok_i64
   45           | tok_float
   46           | tok_double

   47 FieldValue: '=' SimpleExpression
   48           | /* empty */

   49 SimpleExpression: SimpleExpression '+' InnerExpression
   50                 | SimpleExpression '-' InnerExpression
   51                 | InnerExpression

   52 InnerExpression: FullType
   53                | '+' tok_int_constant
   54                | '-' tok_int_constant
   55                | tok_int_constant

   56 CommaOrSemicolonOptional: ','
   57                         | ';'
   58                         | /* empty */

   59 SemicolonOptional: ';'
   60                  | /* empty */


Terminals, with rules where they appear

$end (0) 0
'"' (34) 7
'+' (43) 49 53
',' (44) 56
'-' (45) 50 54
'/' (47) 8
';' (59) 57 59
'=' (61) 20 47
'[' (91) 30 32
']' (93) 30 32
'{' (123) 16 22 26
'}' (125) 16 22 26
error (256)
tok_identifier (258) 7 8 10 11 16 20 21 22 26 29 30 31 32 36 37
tok_literal (259)
tok_int_constant (260) 53 54 55
tok_dub_constant (261)
tok_bool (262) 40
tok_string (263) 39
tok_i8 (264) 41
tok_i16 (265) 42
tok_i32 (266) 43
tok_i64 (267) 44
tok_float (268) 45
tok_double (269) 46
tok_namespace_separator (270) 11 37
tok_namespace (271) 10
tok_struct (272) 23
tok_enum (273) 16
tok_const (274)
tok_message (275) 26
tok_include (276) 7
tok_cplus (277) 33
tok_macro_line (278) 34


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
Program (36)
    on left: 1, on right: 0
DefinitionList (37)
    on left: 2 3, on right: 1 2
Definition (38)
    on left: 4 5 6, on right: 2
Include (39)
    on left: 7, on right: 4
IncludePath (40)
    on left: 8 9, on right: 7 8
Namespace (41)
    on left: 10, on right: 5
NamespaceTail (42)
    on left: 11 12, on right: 10 11
TypeDefinition (43)
    on left: 13 14 15, on right: 6
Enum (44)
    on left: 16, on right: 13
EnumDefList (45)
    on left: 17 18, on right: 16 17
EnumDef (46)
    on left: 19, on right: 17
EnumValue (47)
    on left: 20 21, on right: 19
Struct (48)
    on left: 22, on right: 14
StructHead (49)
    on left: 23, on right: 22
StructFieldList (50)
    on left: 24 25, on right: 22 24
Message (51)
    on left: 26, on right: 15
MessageFieldList (52)
    on left: 27 28, on right: 26 27
Field (53)
    on left: 29 30 31 32 33 34, on right: 24 27
CaptureVerbatimBlock (54)
    on left: 35, on right: 33
FullType (55)
    on left: 36, on right: 31 32 52
NameAccessor (56)
    on left: 37 38, on right: 36 37
SimpleType (57)
    on left: 39 40 41 42 43 44 45 46, on right: 29 30
FieldValue (58)
    on left: 47 48, on right: 29
SimpleExpression (59)
    on left: 49 50 51, on right: 20 30 32 47 49 50
InnerExpression (60)
    on left: 52 53 54 55, on right: 49 50 51
CommaOrSemicolonOptional (61)
    on left: 56 57 58, on right: 19 29 30 31 32
SemicolonOptional (62)
    on left: 59 60, on right: 10 16 22 26


State 0

    0 $accept: . Program $end

    $default  reduce using rule 3 (DefinitionList)

    Program         go to state 1
    DefinitionList  go to state 2


State 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


State 2

    1 Program: DefinitionList .
    2 DefinitionList: DefinitionList . Definition

    tok_namespace  shift, and go to state 4
    tok_struct     shift, and go to state 5
    tok_enum       shift, and go to state 6
    tok_message    shift, and go to state 7
    tok_include    shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Definition      go to state 9
    Include         go to state 10
    Namespace       go to state 11
    TypeDefinition  go to state 12
    Enum            go to state 13
    Struct          go to state 14
    StructHead      go to state 15
    Message         go to state 16


State 3

    0 $accept: Program $end .

    $default  accept


State 4

   10 Namespace: tok_namespace . NamespaceTail tok_identifier SemicolonOptional

    $default  reduce using rule 12 (NamespaceTail)

    NamespaceTail  go to state 17


State 5

   23 StructHead: tok_struct .

    $default  reduce using rule 23 (StructHead)


State 6

   16 Enum: tok_enum . tok_identifier '{' EnumDefList '}' SemicolonOptional

    tok_identifier  shift, and go to state 18


State 7

   26 Message: tok_message . tok_identifier '{' MessageFieldList '}' SemicolonOptional

    tok_identifier  shift, and go to state 19


State 8

    7 Include: tok_include . '"' IncludePath tok_identifier '"'

    '"'  shift, and go to state 20


State 9

    2 DefinitionList: DefinitionList Definition .

    $default  reduce using rule 2 (DefinitionList)


State 10

    4 Definition: Include .

    $default  reduce using rule 4 (Definition)


State 11

    5 Definition: Namespace .

    $default  reduce using rule 5 (Definition)


State 12

    6 Definition: TypeDefinition .

    $default  reduce using rule 6 (Definition)


State 13

   13 TypeDefinition: Enum .

    $default  reduce using rule 13 (TypeDefinition)


State 14

   14 TypeDefinition: Struct .

    $default  reduce using rule 14 (TypeDefinition)


State 15

   22 Struct: StructHead . tok_identifier '{' StructFieldList '}' SemicolonOptional

    tok_identifier  shift, and go to state 21


State 16

   15 TypeDefinition: Message .

    $default  reduce using rule 15 (TypeDefinition)


State 17

   10 Namespace: tok_namespace NamespaceTail . tok_identifier SemicolonOptional
   11 NamespaceTail: NamespaceTail . tok_identifier tok_namespace_separator

    tok_identifier  shift, and go to state 22


State 18

   16 Enum: tok_enum tok_identifier . '{' EnumDefList '}' SemicolonOptional

    '{'  shift, and go to state 23


State 19

   26 Message: tok_message tok_identifier . '{' MessageFieldList '}' SemicolonOptional

    '{'  shift, and go to state 24


State 20

    7 Include: tok_include '"' . IncludePath tok_identifier '"'

    $default  reduce using rule 9 (IncludePath)

    IncludePath  go to state 25


State 21

   22 Struct: StructHead tok_identifier . '{' StructFieldList '}' SemicolonOptional

    '{'  shift, and go to state 26


State 22

   10 Namespace: tok_namespace NamespaceTail tok_identifier . SemicolonOptional
   11 NamespaceTail: NamespaceTail tok_identifier . tok_namespace_separator

    tok_namespace_separator  shift, and go to state 27
    ';'                      shift, and go to state 28

    $default  reduce using rule 60 (SemicolonOptional)

    SemicolonOptional  go to state 29


State 23

   16 Enum: tok_enum tok_identifier '{' . EnumDefList '}' SemicolonOptional

    $default  reduce using rule 18 (EnumDefList)

    EnumDefList  go to state 30


State 24

   26 Message: tok_message tok_identifier '{' . MessageFieldList '}' SemicolonOptional

    $default  reduce using rule 28 (MessageFieldList)

    MessageFieldList  go to state 31


State 25

    7 Include: tok_include '"' IncludePath . tok_identifier '"'
    8 IncludePath: IncludePath . tok_identifier '/'

    tok_identifier  shift, and go to state 32


State 26

   22 Struct: StructHead tok_identifier '{' . StructFieldList '}' SemicolonOptional

    $default  reduce using rule 25 (StructFieldList)

    StructFieldList  go to state 33


State 27

   11 NamespaceTail: NamespaceTail tok_identifier tok_namespace_separator .

    $default  reduce using rule 11 (NamespaceTail)


State 28

   59 SemicolonOptional: ';' .

    $default  reduce using rule 59 (SemicolonOptional)


State 29

   10 Namespace: tok_namespace NamespaceTail tok_identifier SemicolonOptional .

    $default  reduce using rule 10 (Namespace)


State 30

   16 Enum: tok_enum tok_identifier '{' EnumDefList . '}' SemicolonOptional
   17 EnumDefList: EnumDefList . EnumDef

    tok_identifier  shift, and go to state 34
    '}'             shift, and go to state 35

    EnumDef    go to state 36
    EnumValue  go to state 37


State 31

   26 Message: tok_message tok_identifier '{' MessageFieldList . '}' SemicolonOptional
   27 MessageFieldList: MessageFieldList . Field

    tok_bool        shift, and go to state 38
    tok_string      shift, and go to state 39
    tok_i8          shift, and go to state 40
    tok_i16         shift, and go to state 41
    tok_i32         shift, and go to state 42
    tok_i64         shift, and go to state 43
    tok_float       shift, and go to state 44
    tok_double      shift, and go to state 45
    tok_cplus       shift, and go to state 46
    tok_macro_line  shift, and go to state 47
    '}'             shift, and go to state 48

    $default  reduce using rule 38 (NameAccessor)

    Field         go to state 49
    FullType      go to state 50
    NameAccessor  go to state 51
    SimpleType    go to state 52


State 32

    7 Include: tok_include '"' IncludePath tok_identifier . '"'
    8 IncludePath: IncludePath tok_identifier . '/'

    '"'  shift, and go to state 53
    '/'  shift, and go to state 54


State 33

   22 Struct: StructHead tok_identifier '{' StructFieldList . '}' SemicolonOptional
   24 StructFieldList: StructFieldList . Field

    tok_bool        shift, and go to state 38
    tok_string      shift, and go to state 39
    tok_i8          shift, and go to state 40
    tok_i16         shift, and go to state 41
    tok_i32         shift, and go to state 42
    tok_i64         shift, and go to state 43
    tok_float       shift, and go to state 44
    tok_double      shift, and go to state 45
    tok_cplus       shift, and go to state 46
    tok_macro_line  shift, and go to state 47
    '}'             shift, and go to state 55

    $default  reduce using rule 38 (NameAccessor)

    Field         go to state 56
    FullType      go to state 50
    NameAccessor  go to state 51
    SimpleType    go to state 52


State 34

   20 EnumValue: tok_identifier . '=' SimpleExpression
   21          | tok_identifier .

    '='  shift, and go to state 57

    $default  reduce using rule 21 (EnumValue)


State 35

   16 Enum: tok_enum tok_identifier '{' EnumDefList '}' . SemicolonOptional

    ';'  shift, and go to state 28

    $default  reduce using rule 60 (SemicolonOptional)

    SemicolonOptional  go to state 58


State 36

   17 EnumDefList: EnumDefList EnumDef .

    $default  reduce using rule 17 (EnumDefList)


State 37

   19 EnumDef: EnumValue . CommaOrSemicolonOptional

    ','  shift, and go to state 59
    ';'  shift, and go to state 60

    $default  reduce using rule 58 (CommaOrSemicolonOptional)

    CommaOrSemicolonOptional  go to state 61


State 38

   40 SimpleType: tok_bool .

    $default  reduce using rule 40 (SimpleType)


State 39

   39 SimpleType: tok_string .

    $default  reduce using rule 39 (SimpleType)


State 40

   41 SimpleType: tok_i8 .

    $default  reduce using rule 41 (SimpleType)


State 41

   42 SimpleType: tok_i16 .

    $default  reduce using rule 42 (SimpleType)


State 42

   43 SimpleType: tok_i32 .

    $default  reduce using rule 43 (SimpleType)


State 43

   44 SimpleType: tok_i64 .

    $default  reduce using rule 44 (SimpleType)


State 44

   45 SimpleType: tok_float .

    $default  reduce using rule 45 (SimpleType)


State 45

   46 SimpleType: tok_double .

    $default  reduce using rule 46 (SimpleType)


State 46

   33 Field: tok_cplus . CaptureVerbatimBlock

    $default  reduce using rule 35 (CaptureVerbatimBlock)

    CaptureVerbatimBlock  go to state 62


State 47

   34 Field: tok_macro_line .

    $default  reduce using rule 34 (Field)


State 48

   26 Message: tok_message tok_identifier '{' MessageFieldList '}' . SemicolonOptional

    ';'  shift, and go to state 28

    $default  reduce using rule 60 (SemicolonOptional)

    SemicolonOptional  go to state 63


State 49

   27 MessageFieldList: MessageFieldList Field .

    $default  reduce using rule 27 (MessageFieldList)


State 50

   31 Field: FullType . tok_identifier CommaOrSemicolonOptional
   32      | FullType . tok_identifier '[' SimpleExpression ']' CommaOrSemicolonOptional

    tok_identifier  shift, and go to state 64


State 51

   36 FullType: NameAccessor . tok_identifier
   37 NameAccessor: NameAccessor . tok_identifier tok_namespace_separator

    tok_identifier  shift, and go to state 65


State 52

   29 Field: SimpleType . tok_identifier FieldValue CommaOrSemicolonOptional
   30      | SimpleType . tok_identifier '[' SimpleExpression ']' CommaOrSemicolonOptional

    tok_identifier  shift, and go to state 66


State 53

    7 Include: tok_include '"' IncludePath tok_identifier '"' .

    $default  reduce using rule 7 (Include)


State 54

    8 IncludePath: IncludePath tok_identifier '/' .

    $default  reduce using rule 8 (IncludePath)


State 55

   22 Struct: StructHead tok_identifier '{' StructFieldList '}' . SemicolonOptional

    ';'  shift, and go to state 28

    $default  reduce using rule 60 (SemicolonOptional)

    SemicolonOptional  go to state 67


State 56

   24 StructFieldList: StructFieldList Field .

    $default  reduce using rule 24 (StructFieldList)


State 57

   20 EnumValue: tok_identifier '=' . SimpleExpression

    tok_int_constant  shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70

    $default  reduce using rule 38 (NameAccessor)

    FullType          go to state 71
    NameAccessor      go to state 51
    SimpleExpression  go to state 72
    InnerExpression   go to state 73


State 58

   16 Enum: tok_enum tok_identifier '{' EnumDefList '}' SemicolonOptional .

    $default  reduce using rule 16 (Enum)


State 59

   56 CommaOrSemicolonOptional: ',' .

    $default  reduce using rule 56 (CommaOrSemicolonOptional)


State 60

   57 CommaOrSemicolonOptional: ';' .

    $default  reduce using rule 57 (CommaOrSemicolonOptional)


State 61

   19 EnumDef: EnumValue CommaOrSemicolonOptional .

    $default  reduce using rule 19 (EnumDef)


State 62

   33 Field: tok_cplus CaptureVerbatimBlock .

    $default  reduce using rule 33 (Field)


State 63

   26 Message: tok_message tok_identifier '{' MessageFieldList '}' SemicolonOptional .

    $default  reduce using rule 26 (Message)


State 64

   31 Field: FullType tok_identifier . CommaOrSemicolonOptional
   32      | FullType tok_identifier . '[' SimpleExpression ']' CommaOrSemicolonOptional

    '['  shift, and go to state 74
    ','  shift, and go to state 59
    ';'  shift, and go to state 60

    $default  reduce using rule 58 (CommaOrSemicolonOptional)

    CommaOrSemicolonOptional  go to state 75


State 65

   36 FullType: NameAccessor tok_identifier .
   37 NameAccessor: NameAccessor tok_identifier . tok_namespace_separator

    tok_namespace_separator  shift, and go to state 76

    $default  reduce using rule 36 (FullType)


State 66

   29 Field: SimpleType tok_identifier . FieldValue CommaOrSemicolonOptional
   30      | SimpleType tok_identifier . '[' SimpleExpression ']' CommaOrSemicolonOptional

    '='  shift, and go to state 77
    '['  shift, and go to state 78

    $default  reduce using rule 48 (FieldValue)

    FieldValue  go to state 79


State 67

   22 Struct: StructHead tok_identifier '{' StructFieldList '}' SemicolonOptional .

    $default  reduce using rule 22 (Struct)


State 68

   55 InnerExpression: tok_int_constant .

    $default  reduce using rule 55 (InnerExpression)


State 69

   53 InnerExpression: '+' . tok_int_constant

    tok_int_constant  shift, and go to state 80


State 70

   54 InnerExpression: '-' . tok_int_constant

    tok_int_constant  shift, and go to state 81


State 71

   52 InnerExpression: FullType .

    $default  reduce using rule 52 (InnerExpression)


State 72

   20 EnumValue: tok_identifier '=' SimpleExpression .
   49 SimpleExpression: SimpleExpression . '+' InnerExpression
   50                 | SimpleExpression . '-' InnerExpression

    '+'  shift, and go to state 82
    '-'  shift, and go to state 83

    $default  reduce using rule 20 (EnumValue)


State 73

   51 SimpleExpression: InnerExpression .

    $default  reduce using rule 51 (SimpleExpression)


State 74

   32 Field: FullType tok_identifier '[' . SimpleExpression ']' CommaOrSemicolonOptional

    tok_int_constant  shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70

    $default  reduce using rule 38 (NameAccessor)

    FullType          go to state 71
    NameAccessor      go to state 51
    SimpleExpression  go to state 84
    InnerExpression   go to state 73


State 75

   31 Field: FullType tok_identifier CommaOrSemicolonOptional .

    $default  reduce using rule 31 (Field)


State 76

   37 NameAccessor: NameAccessor tok_identifier tok_namespace_separator .

    $default  reduce using rule 37 (NameAccessor)


State 77

   47 FieldValue: '=' . SimpleExpression

    tok_int_constant  shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70

    $default  reduce using rule 38 (NameAccessor)

    FullType          go to state 71
    NameAccessor      go to state 51
    SimpleExpression  go to state 85
    InnerExpression   go to state 73


State 78

   30 Field: SimpleType tok_identifier '[' . SimpleExpression ']' CommaOrSemicolonOptional

    tok_int_constant  shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70

    $default  reduce using rule 38 (NameAccessor)

    FullType          go to state 71
    NameAccessor      go to state 51
    SimpleExpression  go to state 86
    InnerExpression   go to state 73


State 79

   29 Field: SimpleType tok_identifier FieldValue . CommaOrSemicolonOptional

    ','  shift, and go to state 59
    ';'  shift, and go to state 60

    $default  reduce using rule 58 (CommaOrSemicolonOptional)

    CommaOrSemicolonOptional  go to state 87


State 80

   53 InnerExpression: '+' tok_int_constant .

    $default  reduce using rule 53 (InnerExpression)


State 81

   54 InnerExpression: '-' tok_int_constant .

    $default  reduce using rule 54 (InnerExpression)


State 82

   49 SimpleExpression: SimpleExpression '+' . InnerExpression

    tok_int_constant  shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70

    $default  reduce using rule 38 (NameAccessor)

    FullType         go to state 71
    NameAccessor     go to state 51
    InnerExpression  go to state 88


State 83

   50 SimpleExpression: SimpleExpression '-' . InnerExpression

    tok_int_constant  shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70

    $default  reduce using rule 38 (NameAccessor)

    FullType         go to state 71
    NameAccessor     go to state 51
    InnerExpression  go to state 89


State 84

   32 Field: FullType tok_identifier '[' SimpleExpression . ']' CommaOrSemicolonOptional
   49 SimpleExpression: SimpleExpression . '+' InnerExpression
   50                 | SimpleExpression . '-' InnerExpression

    ']'  shift, and go to state 90
    '+'  shift, and go to state 82
    '-'  shift, and go to state 83


State 85

   47 FieldValue: '=' SimpleExpression .
   49 SimpleExpression: SimpleExpression . '+' InnerExpression
   50                 | SimpleExpression . '-' InnerExpression

    '+'  shift, and go to state 82
    '-'  shift, and go to state 83

    $default  reduce using rule 47 (FieldValue)


State 86

   30 Field: SimpleType tok_identifier '[' SimpleExpression . ']' CommaOrSemicolonOptional
